--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2571,7 +2571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "songPopularity",
+   "display_name": "mlenv",
    "language": "python",
    "name": "python3"
   },
@@ -2585,7 +2585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
