Fix syntax error in ridge_ml notebook and implement grid search for Ridge regression

--- a/ridge_ml.ipynb
+++ b/ridge_ml.ipynb
@@ -2,83 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edbfc5d9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (182603721.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom sklearn.linear_model import RidgeCVfrom sklearn.metrics import r2_score\u001b[39m\n                                                 ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import r2_score\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "081f78b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('scaled_data.csv')\n",
-    "data = data[:100]\n",
+    "#data = data[:1000]\n",
     "X = data.drop('popularity', axis=1)\n",
     "y = data['popularity']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c5ecf83",
+   "execution_count": 26,
+   "id": "7de39ce1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)"
+    "grid = {\n",
+    "    'alpha': [0.1, 1.0, 10.0, 100.0, 200.0, 500.0],\n",
+    "    'solver': ['sag', 'auto', 'lsqr', 'sparse_cg'],\n",
+    "    'tol': [1e-4, 1e-3],\n",
+    "    'max_iter': [1000, 1500, 2000, 5000, 7500, 10000]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6232b8b1",
+   "execution_count": 30,
+   "id": "67075c50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)"
+    "def grid_search_ridge(X, y, grid):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "    keys = grid.keys()\n",
+    "    values = grid.values()\n",
+    "\n",
+    "    best_r2 = -float('inf')\n",
+    "    for combo in itertools.product(*values):\n",
+    "        params = dict(zip(keys, combo))\n",
+    "\n",
+    "        model = Ridge(**params)\n",
+    "        model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "        y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "        r2 = r2_score(y_test, y_pred)\n",
+    "        #print(f\"Params: {params}, R2: {r2}\")\n",
+    "        if r2 > best_r2:\n",
+    "            best_r2 = r2\n",
+    "            best_params = params\n",
+    "\n",
+    "    return best_params, best_r2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8168334",
+   "execution_count": 31,
+   "id": "e4594bf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "The best parameters are:  ({'alpha': 1.0, 'solver': 'sag', 'tol': 0.001, 'max_iter': 5000}, 0.5895833748103139)\n"
+     ]
+    }
+   ],
    "source": [
-    "ridge_cv = RidgeCV(alphas=[0.1, 1.0, 10.0], cv=5)\n",
-    "ridge_cv.fit(X_train_scaled, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91a37e14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = ridge_cv.predict(X_test_scaled)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(f'R^2 Score: {r2}')"
+    "print(\"\\n\\nThe best parameters are: \", grid_search_ridge(X, y, grid))"
    ]
   }
  ],
