Finished implementing lightGBM

--- a/ridge_ml.ipynb
+++ b/ridge_ml.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "🟦 1) alpha — Regularization gücü (en önemli parametre!)\n",
+    "\"\"\"1) alpha — Regularization gücü (en önemli parametre!)\n",
     "\n",
     "Ceza katsayısıdır (L2 penalty).\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "Büyük tol → daha hızlı ama daha kaba çözüm\n",
     "\n",
-    "➡ Varsayılan (1e-4) çoğu zaman yeterli."
+    "➡ Varsayılan (1e-4) çoğu zaman yeterli.\"\"\""
    ]
   },
   {
