Lasso regression is implemented

--- a/feature_eng.ipynb
+++ b/feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "103d7f62",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "bd003b35",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7729e4a7",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e17a0af8",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "537a2077",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "012c3567",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f91ad396",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "12cb5f00",
    "metadata": {},
    "outputs": [
@@ -181,12 +181,12 @@
        "       'subgenre_pop edm', 'subgenre_post-teen pop',\n",
        "       'subgenre_progressive electro house', 'subgenre_reggaeton',\n",
        "       'subgenre_southern hip hop', 'subgenre_trap', 'subgenre_tropical',\n",
-       "       'subgenre_urban contemporary', 'artist_song_count',\n",
-       "       'artist_avg_popularity', 'artist_high_pop_ratio'],\n",
+       "       'subgenre_urban contemporary', 'artist_avg_popularity',\n",
+       "       'artist_song_count', 'artist_high_pop_ratio'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "be69a800",
    "metadata": {},
    "outputs": [
@@ -219,10 +219,10 @@
       "       'subgenre_pop edm', 'subgenre_post-teen pop',\n",
       "       'subgenre_progressive electro house', 'subgenre_reggaeton',\n",
       "       'subgenre_southern hip hop', 'subgenre_trap', 'subgenre_tropical',\n",
-      "       'subgenre_urban contemporary', 'artist_song_count',\n",
-      "       'artist_avg_popularity', 'artist_high_pop_ratio', 'key_0', 'key_1',\n",
-      "       'key_2', 'key_3', 'key_4', 'key_5', 'key_6', 'key_7', 'key_8', 'key_9',\n",
-      "       'key_10', 'key_11'],\n",
+      "       'subgenre_urban contemporary', 'artist_avg_popularity',\n",
+      "       'artist_song_count', 'artist_high_pop_ratio', 'key_0', 'key_1', 'key_2',\n",
+      "       'key_3', 'key_4', 'key_5', 'key_6', 'key_7', 'key_8', 'key_9', 'key_10',\n",
+      "       'key_11'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f20bb9a3",
    "metadata": {},
    "outputs": [
@@ -258,10 +258,10 @@
       "       'subgenre_pop edm', 'subgenre_post-teen pop',\n",
       "       'subgenre_progressive electro house', 'subgenre_reggaeton',\n",
       "       'subgenre_southern hip hop', 'subgenre_trap', 'subgenre_tropical',\n",
-      "       'subgenre_urban contemporary', 'artist_song_count',\n",
-      "       'artist_avg_popularity', 'artist_high_pop_ratio', 'key_0', 'key_1',\n",
-      "       'key_2', 'key_3', 'key_4', 'key_5', 'key_6', 'key_7', 'key_8', 'key_9',\n",
-      "       'key_10', 'key_11'],\n",
+      "       'subgenre_urban contemporary', 'artist_avg_popularity',\n",
+      "       'artist_song_count', 'artist_high_pop_ratio', 'key_0', 'key_1', 'key_2',\n",
+      "       'key_3', 'key_4', 'key_5', 'key_6', 'key_7', 'key_8', 'key_9', 'key_10',\n",
+      "       'key_11'],\n",
       "      dtype='object')\n",
       "58\n"
      ]
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "f1bef65d",
    "metadata": {},
    "outputs": [
@@ -489,6 +489,16 @@
     "print(f\"ZATEN 0-1 ARALIGINDA OLAN SÜTUNLAR: {len(normalized_cols)} adet\")\n",
     "print(\"=\" * 80)\n",
     "print(normalized_cols[['Column', 'Min', 'Max']].to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "befc0a70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('final_processed_data.csv', index=False)"
    ]
   }
  ],
