--- a/gpr.ipynb
+++ b/gpr.ipynb
@@ -115,8 +115,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "mlenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
