--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "id": "decc79b5",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "    ])\n",
     "    # Compile the model\n",
     "    optimizer = Adam(learning_rate=0.001)\n",
-    "    model.compile(optimizer=optimizer, loss='mean_squared_error')\n",
+    "    model.compile(optimizer=optimizer, loss='mean_squared_error', metrics=[\"mae\"])\n",
     "    return model"
    ]
   },
