Refactor code structure for improved readability and maintainability

--- a/lightGBM.ipynb
+++ b/lightGBM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "35a7be96",
    "metadata": {},
    "outputs": [],
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "627f7c88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('scaled_data.csv')\n",
+    "data = pd.read_csv('final_data.csv')\n",
     "data = data[:1000]\n",
     "X = data.drop('popularity', axis=1)\n",
     "y = data['popularity']"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "f11e3f20",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "dc212731",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "38ce2473",
    "metadata": {},
    "outputs": [
@@ -90,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best MAE:  9.228156071274489\n",
-      "Best Parameters:  {'objective': 'regression', 'min_split_gain': 0.01, 'learning_rate': 0.05, 'min_child_samples': 50, 'subsample': 0.7, 'n_estimators': 100, 'feature_fraction': 1.0, 'metric': 'rmse', 'max_depth': 9, 'num_leaves': 512}\n"
+      "Best MAE:  9.074905588335023\n",
+      "Best Parameters:  {'objective': 'regression', 'min_split_gain': 0.01, 'learning_rate': 0.05, 'min_child_samples': 40, 'subsample': 0.7, 'n_estimators': 120, 'feature_fraction': 1.0, 'metric': 'rmse', 'max_depth': 9, 'num_leaves': 512}\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "656c26be",
    "metadata": {},
    "outputs": [
@@ -112,8 +112,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE Score for LightGBM with best parameters:  8.895715328023496\n",
-      "R2 Score for LightGBM with best parameters:  0.6535420795559146\n"
+      "MAE Score for LightGBM with best parameters:  8.908958408604144\n",
+      "R2 Score for LightGBM with best parameters:  0.653736110984689\n"
      ]
     }
    ],
