--- a/ridge_ml.ipynb
+++ b/ridge_ml.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "97995140",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1) alpha — Regularization gücü (en önemli parametre!)\\n\\nCeza katsayısıdır (L2 penalty).\\n\\nAlpha ↑ → Daha güçlü regularizasyon → Katsayılar küçülür → Overfitting azalır.\\n\\nAlpha ↓ → Regularizasyon azalır → Model daha esnek → Overfitting riski artar.\\n\\n➡ En kritik hiperparametre.\\n🟩 2) solver — Çözüm algoritması\\n\\nModeli hangi optimizasyon yöntemiyle çözeceğini belirler.\\n\\nKısaca:\\n\\n‘auto’ → sklearn kendisi karar verir\\n\\n‘sag’ / ‘saga’ → büyük ve yüksek boyutlu veri için hızlı\\n\\n‘lbfgs’ → küçük–orta veri için çok stabil\\n\\n‘lsqr’ / ‘sparse_cg’ → sparse matrisler için iyi\\n\\n‘svd’ / ‘cholesky’ → kapalı form çözümler (küçük veri için)\\n\\n➡ Verinin boyutuna göre hız/stabilite fark eder.\\n🟨 3) max_iter — Maksimum iterasyon sayısı\\n\\nSolver iteratif çalışıyorsa:\\n\\nmax_iter çözüme ulaşmak için izin verilen en fazla adım.\\n\\nYetmezse ConvergenceWarning verir.\\n\\n➡ Genelde 1000–5000 yeterli.\\n\\n🟧 4) tol — Durdurma eşiği (convergence toleransı)\\n\\nModel optimizasyonu ne zaman durduracak?\\n\\nKüçük tol → daha hassas çözüm → daha uzun süre\\n\\nBüyük tol → daha hızlı ama daha kaba çözüm\\n\\n➡ Varsayılan (1e-4) çoğu zaman yeterli.'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"1) alpha — Regularization gücü (en önemli parametre!)\n",
     "\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "edbfc5d9",
    "metadata": {},
    "outputs": [],
@@ -71,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "081f78b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('scaled_data.csv')\n",
+    "data = pd.read_csv('final_data.csv')\n",
     "#data = data[:1000]\n",
     "X = data.drop('popularity', axis=1)\n",
     "y = data['popularity']"
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "7de39ce1",
    "metadata": {},
    "outputs": [],
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "67075c50",
    "metadata": {},
    "outputs": [],
@@ -133,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "e4594bf1",
    "metadata": {},
    "outputs": [
@@ -143,8 +154,8 @@
      "text": [
       "\n",
       "\n",
-      "The best parameters are:  {'alpha': 0.1, 'solver': 'lsqr', 'tol': 0.001, 'max_iter': 1000}\n",
-      "Best R2 score:  0.5777729847132438\n"
+      "The best parameters are:  {'alpha': 0.1, 'solver': 'sag', 'tol': 0.01, 'max_iter': 7500}\n",
+      "Best R2 score:  0.5870717825998937\n"
      ]
     }
    ],
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "4c2af8f2",
    "metadata": {},
    "outputs": [
@@ -165,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score with best parameters on test set:  0.5895214836450854\n"
+      "R2 score with best parameters on test set:  0.5968439178629816\n"
      ]
     }
    ],
