nn işte. genre ları sildik.

--- a/feature_eng_final.ipynb
+++ b/feature_eng_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "f027d520",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "7aeceaef",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "0f75253b",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "5ddea5d3",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "subgenre_urban contemporary                              0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "a8ba4262",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "4f0db09c",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "e774bdc4",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "c466f5a9",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "4eb7964c",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "b85b0439",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "eb3d3b24",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "239634f9",
    "metadata": {},
    "outputs": [
@@ -660,6 +660,8 @@
       "'name' sütunu 'Unknown' ile dolduruldu\n",
       "'artist' sütunu 'Unknown' ile dolduruldu\n",
       "'album_name' sütunu 'Unknown' ile dolduruldu\n",
+      "\n",
+      "Kalan NaN satır sayısı: 1681\n",
       "\n",
       "Kalan NaN satır sayısı: 1681\n"
      ]
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "7a2913f5",
    "metadata": {},
    "outputs": [
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "e6826477",
    "metadata": {},
    "outputs": [
@@ -823,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "336cd9ed",
    "metadata": {},
    "outputs": [
@@ -832,68 +834,6 @@
      "output_type": "stream",
      "text": [
       "TÜM SÜTUNLARIN DEĞER ARALIKLARI\n",
-      "RANGE'E GÖRE SIRALANMIŞ SÜTUNLAR:\n",
-      "                            Column         Min        Max         Range          Mean          Std\n",
-      "                       duration_ms 4000.000000 517810.000 513810.000000 226575.967026 61078.450819\n",
-      "                             tempo    0.000000    239.440    239.440000    120.956180    26.954560\n",
-      "                 artist_song_count    1.000000    130.000    129.000000     11.385104    16.923553\n",
-      "                        popularity    0.000000    100.000    100.000000     39.329771    23.702376\n",
-      "             artist_avg_popularity    0.000000     97.000     97.000000     39.329771    17.504857\n",
-      "                         album_age    5.000000     68.000     63.000000     12.487657    10.070509\n",
-      "                          loudness  -46.448000      1.275     47.723000     -6.817696     3.036243\n",
-      "                               key    0.000000     11.000     11.000000      5.368000     3.613904\n",
-      "                    playlist_count    1.000000      8.000      7.000000      1.137361     0.485660\n",
-      "                       genre_latin    0.000000      1.000      1.000000      0.163669     0.369982\n",
-      "                         genre_r&b    0.000000      1.000      1.000000      0.181196     0.385187\n",
-      "               subgenre_album rock    0.000000      1.000      1.000000      0.037558     0.190128\n",
-      "                         genre_pop    0.000000      1.000      1.000000      0.180985     0.385012\n",
-      "                         genre_rap    0.000000      1.000      1.000000      0.193469     0.395024\n",
-      "                         genre_edm    0.000000      1.000      1.000000      0.195267     0.396413\n",
-      "                              mode    0.000000      1.000      1.000000      0.565489     0.495701\n",
-      "            subgenre_latin hip hop    0.000000      1.000      1.000000      0.058400     0.234503\n",
-      "          subgenre_indie poptimism    0.000000      1.000      1.000000      0.058965     0.235563\n",
-      "                  subgenre_hip pop    0.000000      1.000      1.000000      0.044294     0.205751\n",
-      "                subgenre_latin pop    0.000000      1.000      1.000000      0.044506     0.206219\n",
-      "                  subgenre_pop edm    0.000000      1.000      1.000000      0.053498     0.225029\n",
-      "                 subgenre_neo soul    0.000000      1.000      1.000000      0.057730     0.233237\n",
-      "           subgenre_new jack swing    0.000000      1.000      1.000000      0.039956     0.195860\n",
-      "                        genre_rock    0.000000      1.000      1.000000      0.156969     0.363778\n",
-      "            subgenre_electro house    0.000000      1.000      1.000000      0.053287     0.224609\n",
-      "               subgenre_electropop    0.000000      1.000      1.000000      0.049654     0.217234\n",
-      "             subgenre_gangster rap    0.000000      1.000      1.000000      0.051418     0.220852\n",
-      "                subgenre_hard rock    0.000000      1.000      1.000000      0.052370     0.222776\n",
-      "                  subgenre_hip hop    0.000000      1.000      1.000000      0.046622     0.210831\n",
-      "                 subgenre_big room    0.000000      1.000      1.000000      0.042531     0.201800\n",
-      "             subgenre_classic rock    0.000000      1.000      1.000000      0.045705     0.208847\n",
-      "                subgenre_dance pop    0.000000      1.000      1.000000      0.045775     0.209001\n",
-      "                subgenre_reggaeton    0.000000      1.000      1.000000      0.033467     0.179857\n",
-      "subgenre_progressive electro house    0.000000      1.000      1.000000      0.063796     0.244394\n",
-      "            subgenre_post-teen pop    0.000000      1.000      1.000000      0.039815     0.195528\n",
-      "         subgenre_southern hip hop    0.000000      1.000      1.000000      0.059070     0.235761\n",
-      "       subgenre_urban contemporary    0.000000      1.000      1.000000      0.049549     0.217014\n",
-      "                 subgenre_tropical    0.000000      1.000      1.000000      0.045422     0.208233\n",
-      "                     subgenre_trap    0.000000      1.000      1.000000      0.045528     0.208463\n",
-      "           subgenre_permanent wave    0.000000      1.000      1.000000      0.038969     0.193524\n",
-      "             artist_high_pop_ratio    0.000000      1.000      1.000000      0.092926     0.184731\n",
-      "                            energy    0.000175      1.000      0.999825      0.698388     0.183503\n",
-      "                          liveness    0.000000      0.996      0.996000      0.190958     0.155894\n",
-      "                      acousticness    0.000000      0.994      0.994000      0.177176     0.222803\n",
-      "                  instrumentalness    0.000000      0.994      0.994000      0.091117     0.232548\n",
-      "                           valence    0.000000      0.991      0.991000      0.510387     0.234340\n",
-      "                      danceability    0.000000      0.983      0.983000      0.653372     0.145785\n",
-      "                       speechiness    0.000000      0.918      0.918000      0.107954     0.102556\n",
-      "NORMALİZE EDİLMESİ GEREKEN SÜTUNLAR (0-1 dışında):\n",
-      "               Column      Min        Max      Range\n",
-      "          duration_ms 4000.000 517810.000 513810.000\n",
-      "                tempo    0.000    239.440    239.440\n",
-      "    artist_song_count    1.000    130.000    129.000\n",
-      "           popularity    0.000    100.000    100.000\n",
-      "artist_avg_popularity    0.000     97.000     97.000\n",
-      "            album_age    5.000     68.000     63.000\n",
-      "             loudness  -46.448      1.275     47.723\n",
-      "                  key    0.000     11.000     11.000\n",
-      "       playlist_count    1.000      8.000      7.000\n",
-      "ONE-HOT ENCODED SÜTUNLAR: 30 adet\n",
       "RANGE'E GÖRE SIRALANMIŞ SÜTUNLAR:\n",
       "                            Column         Min        Max         Range          Mean          Std\n",
       "                       duration_ms 4000.000000 517810.000 513810.000000 226575.967026 61078.450819\n",
@@ -995,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "e228bd43",
    "metadata": {},
    "outputs": [
@@ -1050,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "55bbd065",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "ef750d76",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "5338bf02",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "942538a6",
    "metadata": {},
    "outputs": [],
@@ -1106,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "60671680",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "e2f543cb",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "8c18ca5a",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "9fe84255",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "82a32cb1",
    "metadata": {},
    "outputs": [
@@ -1275,8 +1215,7 @@
      "text": [
       "Columns after drop Index(['popularity', 'danceability', 'energy', 'loudness', 'mode',\n",
       "       'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
-      "       'valence', 'tempo', 'duration_ms', 'playlist_count', 'genre_edm',\n",
-      "       'genre_latin', 'genre_pop', 'genre_r&b', 'genre_rap', 'genre_rock',\n",
+      "       'valence', 'tempo', 'duration_ms', 'playlist_count',\n",
       "       'subgenre_album rock', 'subgenre_big room', 'subgenre_classic rock',\n",
       "       'subgenre_dance pop', 'subgenre_electro house', 'subgenre_electropop',\n",
       "       'subgenre_gangster rap', 'subgenre_hard rock', 'subgenre_hip hop',\n",
@@ -1290,7 +1229,7 @@
       "       'artist_high_pop_ratio', 'album_age', 'album_age_log',\n",
       "       'playlist_count_final', 'artist_song_count_final'],\n",
       "      dtype='object')\n",
-      "49\n"
+      "43\n"
      ]
     }
    ],
@@ -1306,7 +1245,8 @@
     "                   'artist_song_count',\n",
     "                   'key'\n",
     "]\n",
-    "\n",
+    "genres = [c for c in data.columns if c.startswith('genre_')]\n",
+    "data.drop(genres, axis=1, inplace=True)\n",
     "data = data.drop(columns=columns_to_drop)\n",
     "print(\"Columns after drop \" +  str(data.columns))\n",
     "print(len(data.columns))"
@@ -1314,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "5ab168dd",
    "metadata": {},
    "outputs": [
@@ -1323,8 +1263,8 @@
      "output_type": "stream",
      "text": [
       "✅ Veri kaydedildi: final_data.csv\n",
-      "📊 Shape: (28356, 49)\n",
-      "📋 Sütun sayısı: 49\n"
+      "📊 Shape: (28356, 43)\n",
+      "📋 Sütun sayısı: 43\n"
      ]
     }
    ],
