feat: Implement Feature Engineering and Ensemble Model for Popularity Prediction
- Added FeatureEngineer class for preprocessing and feature extraction from music dataset.
- Implemented methods to calculate artist song counts, average popularity, high popularity ratios, and binning for song counts.
- Created ensemble model in Jupyter notebook combining Random Forest Classifier and MLP Regressor with a Linear Regression meta model.
- Included performance evaluation metrics and visualizations for model comparison and error analysis.

--- a/models/lightGBM.ipynb
+++ b/models/lightGBM.ipynb
@@ -2,35 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "35a7be96",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('d:/spotifyTrendAnalysis')\n",
     "from sklearn.model_selection import train_test_split\n",
     "from lightgbm import LGBMRegressor\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import pandas as pd\n",
-    "import itertools"
+    "import itertools\n",
+    "# Reload module to get latest changes\n",
+    "import importlib\n",
+    "if 'EngineerFeature' in sys.modules:\n",
+    "    importlib.reload(sys.modules['EngineerFeature'])\n",
+    "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "627f7c88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in data: ['artist', 'popularity', 'danceability', 'energy', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo', 'duration_ms', 'playlist_count', 'subgenre_album rock', 'subgenre_big room', 'subgenre_classic rock', 'subgenre_dance pop', 'subgenre_electro house', 'subgenre_electropop', 'subgenre_gangster rap', 'subgenre_hard rock', 'subgenre_hip hop', 'subgenre_hip pop', 'subgenre_indie poptimism', 'subgenre_latin hip hop', 'subgenre_latin pop', 'subgenre_neo soul', 'subgenre_new jack swing', 'subgenre_permanent wave', 'subgenre_pop edm', 'subgenre_post-teen pop', 'subgenre_progressive electro house', 'subgenre_reggaeton', 'subgenre_southern hip hop', 'subgenre_trap', 'subgenre_tropical', 'subgenre_urban contemporary', 'album_age_log', 'playlist_count_final']\n",
+      "Shape: (28356, 40)\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_csv('final_data.csv')\n",
-    "data = data[:1000]\n",
+    "data = pd.read_csv('../final_data.csv')\n",
+    "print(\"Columns in data:\", data.columns.tolist())\n",
+    "print(\"Shape:\", data.shape)\n",
     "X = data.drop('popularity', axis=1)\n",
     "y = data['popularity']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "f11e3f20",
    "metadata": {},
    "outputs": [],
@@ -50,15 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "dc212731",
    "metadata": {},
    "outputs": [],
    "source": [
     "def grid_search_lgbm(X, y, grid):\n",
-    "    X_train, X_val, y_train, y_val = train_test_split(X, y, test_size = 0.2, random_state = 42)\n",
+    "    X_train, X_val, y_train, y_val = train_test_split(X, y, test_size = 0.2, random_state = 24)\n",
     "    best_mae = float('inf')\n",
-    "\n",
     "    keys = grid.keys()\n",
     "    values = grid.values()\n",
     "\n",
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "38ce2473",
    "metadata": {},
    "outputs": [
@@ -90,21 +106,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best MAE:  9.074905588335023\n",
-      "Best Parameters:  {'objective': 'regression', 'min_split_gain': 0.01, 'learning_rate': 0.05, 'min_child_samples': 40, 'subsample': 0.7, 'n_estimators': 120, 'feature_fraction': 1.0, 'metric': 'rmse', 'max_depth': 9, 'num_leaves': 512}\n"
+      "Best MAE:  9.535651821524853\n",
+      "Best Parameters:  {'objective': 'regression', 'min_split_gain': 0.25, 'learning_rate': 0.05, 'min_child_samples': 40, 'subsample': 0.7, 'n_estimators': 120, 'feature_fraction': 1.0, 'metric': 'rmse', 'max_depth': 9, 'num_leaves': 512}\n"
      ]
     }
    ],
    "source": [
     "X_train1, X_test, y_train1, y_test = train_test_split(X, y, test_size=0.2, random_state = 42)\n",
-    "best_params, best_mae = grid_search_lgbm(X_train1, y_train1, grid)\n",
+    "fe = FeatureEngineer()\n",
+    "X_train = fe.fit_transform(X_train1, y_train1)\n",
+    "X_test = fe.transform(X_test)\n",
+    "best_params, best_mae = grid_search_lgbm(X_train, y_train1, grid)\n",
     "print(\"Best MAE: \", best_mae)\n",
     "print(\"Best Parameters: \", best_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "656c26be",
    "metadata": {},
    "outputs": [
@@ -112,19 +131,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE Score for LightGBM with best parameters:  8.908958408604144\n",
-      "R2 Score for LightGBM with best parameters:  0.653736110984689\n"
+      "MAE Score for LightGBM with best parameters:  15.205795957325446\n",
+      "R2 Score for LightGBM with best parameters:  0.26930214068766745\n"
      ]
     }
    ],
    "source": [
     "model = LGBMRegressor(**best_params)\n",
-    "model.fit(X_train1, y_train1)\n",
+    "model.fit(X_train, y_train1)\n",
     "y_pred = model.predict(X_test)\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "print(\"MAE Score for LightGBM with best parameters: \", mae)\n",
     "r2 = r2_score(y_test, y_pred)\n",
-    "print(\"R2 Score for LightGBM with best parameters: \", r2)\n"
+    "print(\"R2 Score for LightGBM with best parameters: \", r2)"
    ]
   }
  ],
