--- a/models/random_forest.ipynb
+++ b/models/random_forest.ipynb
@@ -29,7 +29,13 @@
     "import optuna\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import shap"
+    "import shap\n",
+    "import sys\n",
+    "sys.path.append('d:/spotifyTrendAnalysis')\n",
+    "import importlib\n",
+    "if 'EngineerFeature' in sys.modules:\n",
+    "    importlib.reload(sys.modules['EngineerFeature'])\n",
+    "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eedfaa57",
    "metadata": {},
    "outputs": [
@@ -107,7 +113,9 @@
    "source": [
     "# Split the dataset into training(%80) and test(%20) sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "fe = FeatureEngineer()\n",
+    "X_train = fe.fit_transform(X_train, y_train)\n",
+    "X_test = fe.transform(X_test)\n",
     "print(X_train.shape, X_test.shape)"
    ]
   },
