--- a/models/ridge_ml.ipynb
+++ b/models/ridge_ml.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "edbfc5d9",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,13 @@
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import r2_score\n",
     "import pandas as pd\n",
-    "import itertools"
+    "import itertools\n",
+    "import sys\n",
+    "sys.path.append('d:/spotifyTrendAnalysis')\n",
+    "import importlib\n",
+    "if 'EngineerFeature' in sys.modules:\n",
+    "    importlib.reload(sys.modules['EngineerFeature'])\n",
+    "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
@@ -144,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e4594bf1",
    "metadata": {},
    "outputs": [
@@ -161,6 +167,9 @@
    ],
    "source": [
     "X_train1, X_test1, y_train1, y_test1 = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "fe = FeatureEngineer()\n",
+    "X_train = fe.fit_transform(X_train1, y_train1)\n",
+    "X_test = fe.transform(X_test1)\n",
     "best_params, best_r2 = grid_search_ridge(X_train1, y_train1, grid)\n",
     "print(\"\\n\\nThe best parameters are: \", best_params)\n",
     "print(\"Best R2 score: \", best_r2)"
