--- a/models/gpr.ipynb
+++ b/models/gpr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "abace725",
    "metadata": {},
    "outputs": [],
@@ -12,9 +12,16 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "import pandas as pd\n",
     "import itertools\n",
+    "import numpy as np\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
     "from sklearn.gaussian_process.kernels import RBF, ConstantKernel\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import sys\n",
+    "sys.path.append('d:/spotifyTrendAnalysis')\n",
+    "import importlib\n",
+    "if 'EngineerFeature' in sys.modules:\n",
+    "    importlib.reload(sys.modules['EngineerFeature'])\n",
+    "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
@@ -24,10 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('scaled_data.csv')\n",
-    "data = data[:1000]\n",
+    "data = pd.read_csv('../final_data.csv')\n",
+    "# GPR çok yavaş, veri setini küçült (örneğin 2000 satır)\n",
+    "data = data.sample(n=2000, random_state=42)\n",
     "X = data.drop('popularity', axis=1)\n",
-    "y = data['popularity']"
+    "y = data['popularity']\n",
+    "print(f\"Dataset size: {len(data)} rows\")"
    ]
   },
   {
@@ -38,16 +47,17 @@
    "outputs": [],
    "source": [
     "grid = {\n",
-    "    'constant_value': [0.1, 1.0, 10.0],\n",
-    "    'length_scale': [0.1, 1.0, 10.0],\n",
-    "    'alpha': [1e-10, 1e-2, 1e-1],  # noise / regularization term\n",
-    "    'n_restarts': [0, 5]  # kernel hyperparam optimizasyonu için yeniden başlama sayısı\n",
-    "}"
+    "    'constant_value': [1.0, 10.0],  # 3 -> 2 değer\n",
+    "    'length_scale': [1.0, 10.0],     # 3 -> 2 değer\n",
+    "    'alpha': [1e-10, 1e-2],          # 3 -> 2 değer\n",
+    "    'n_restarts': [0, 5]             # 2 değer (aynı)\n",
+    "}\n",
+    "# Toplam kombinasyon: 2*2*2*2 = 16 (eskisi 54)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6dce0e26",
    "metadata": {},
    "outputs": [],
@@ -92,7 +102,10 @@
    "outputs": [],
    "source": [
     "X_train1, X_test, y_train1, y_test = train_test_split(X, y, test_size=0.2, random_state = 42)\n",
-    "best_params, best_mae = grid_search_rbf(X_train1, y_train1, grid)\n",
+    "fe = FeatureEngineer()\n",
+    "X_train1 = fe.fit_transform(X_train1, y_train1)\n",
+    "X_test = fe.transform(X_test)\n",
+    "best_params, best_mae = grid_search_gpr(X_train1, y_train1, grid)\n",
     "print(\"Best MAE: \", best_mae)\n",
     "print(\"Best Parameters: \", best_params)"
    ]
@@ -104,13 +117,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = (**best_params)\n",
+    "model = GaussianProcessRegressor(**best_params)\n",
     "model.fit(X_train1, y_train1)\n",
     "y_pred = model.predict(X_test)\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
-    "print(\"MAE Score for LightGBM with best parameters: \", mae)\n",
+    "print(\"MAE Score for GaussianProcessRegressor with best parameters: \", mae)\n",
     "r2 = r2_score(y_test, y_pred)\n",
-    "print(\"R2 Score for LightGBM with best parameters: \", r2)\n"
+    "print(\"R2 Score for GaussianProcessRegressor with best parameters: \", r2)\n"
    ]
   }
  ],
@@ -121,7 +134,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.10"
   }
  },
