--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "75575b40",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,13 @@
     "\n",
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "from sklearn.inspection import PartialDependenceDisplay\n"
+    "from sklearn.inspection import PartialDependenceDisplay\n",
+    "import sys\n",
+    "sys.path.append('d:/spotifyTrendAnalysis')\n",
+    "import importlib\n",
+    "if 'EngineerFeature' in sys.modules:\n",
+    "    importlib.reload(sys.modules['EngineerFeature'])\n",
+    "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
@@ -52,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "32b67253",
    "metadata": {},
    "outputs": [
@@ -67,7 +73,9 @@
    "source": [
     "# Split the dataset into training(%70), validation(%15), and test(%15) sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "fe = FeatureEngineer()\n",
+    "X_train = fe.fit_transform(X_train, y_train)\n",
+    "X_test = fe.transform(X_test)\n",
     "print(X_train.shape, X_test.shape)"
    ]
   },
