--- a/feature_eng.ipynb
+++ b/feature_eng.ipynb
@@ -634,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "songPopularity",
    "language": "python",
    "name": "python3"
   },
@@ -648,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
