--- a/eda_final.ipynb
+++ b/eda_final.ipynb
@@ -1907,7 +1907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "songPopularity",
+   "display_name": "mlenv",
    "language": "python",
    "name": "python3"
   },
@@ -1921,7 +1921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
