Refactor model notebooks to remove unnecessary sys.path modifications and streamline imports
- Updated import statements in gpr.ipynb, lasso_regression.ipynb, lightGBM.ipynb, nn.ipynb, random_forest.ipynb, ridge_ml.ipynb, xgboost.ipynb to use relative imports for FeatureEngineer.
- Set execution_count to null for all modified notebooks to reset execution state.
- Removed redundant sys.path.append and importlib.reload calls to enhance code clarity and maintainability.

--- a/models/gpr.ipynb
+++ b/models/gpr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "abace725",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,8 @@
     "import itertools\n",
     "import numpy as np\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.gaussian_process.kernels import RBF, ConstantKernel\n",
+    "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import sys\n",
-    "sys.path.append('d:/spotifyTrendAnalysis')\n",
-    "import importlib\n",
-    "if 'EngineerFeature' in sys.modules:\n",
-    "    importlib.reload(sys.modules['EngineerFeature'])\n",
     "from EngineerFeature import FeatureEngineer"
    ]
   },
