--- a/models/random_forest.ipynb
+++ b/models/random_forest.ipynb
@@ -30,12 +30,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import shap\n",
-    "import sys\n",
-    "sys.path.append('d:/spotifyTrendAnalysis')\n",
-    "import importlib\n",
-    "if 'EngineerFeature' in sys.modules:\n",
-    "    importlib.reload(sys.modules['EngineerFeature'])\n",
-    "from EngineerFeature import FeatureEngineer"
+    "from models.EngineerFeature import FeatureEngineer"
    ]
   },
   {
