--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -21,16 +21,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.inspection import PartialDependenceDisplay\n",
-    "import sys\n",
-    "sys.path.append('d:/spotifyTrendAnalysis')\n",
-    "import importlib\n",
-    "if 'EngineerFeature' in sys.modules:\n",
-    "    importlib.reload(sys.modules['EngineerFeature'])\n",
-    "from EngineerFeature import FeatureEngineer"
+    "from models.EngineerFeature import FeatureEngineer"
    ]
   },
   {
